--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style=" margin: none; padding: none;">
-    <header style=" color: #FF0000; height: 70px; width: 100%">
+<body style="margin: 0; padding: 0;">
+    <header style=" background-color: #FF0000; height: 70px; width: 100%;">
 
     </header>
-    <footer style="color: #00FF00; height: 60px;  width: 100px;">
-        <p style="align-self: cen
-        ;">Best SChool</p>
+    <footer style="background-color: #00FF00; height: 60px;  width: 100%; position: absolute; bottom: 0;">
+        <p style="text-align: center;">Best SChool</p>
     </footer>
 </body>
 </html>
