--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -11,7 +11,7 @@
 
     </header>
     <footer style="background-color: #00FF00; height: 60px;  width: 100%; position: absolute; bottom: 0;">
-        <p style="text-align: center;">Best SChool</p>
+        <p style="text-align: center; vertical-align: center;">Best SChool</p>
     </footer>
 </body>
 </html>
